version 1.2.0.44 : + minor bug fixes (fixed 'If' function in UQL) + added android project : upa-impl splitted to upa-core (platform independent) and upa-impl (java/cs-desktop) and upa-android + added support for using Enum literal in UQL (example : "where x.myEnumField='MY_CONST'" + added support for using Date literal in UQL (example : "where x.myDateField='2012-12-13" + added support for NamedFormula as a plain method